# EscapeEngine

./: .gitmodules  CMakeLists.txt  README.md  conanfile.txt
etc/: Plan.txt
src/: config.cpp  config.hpp  main.cpp
src/backend/: glfwInitialize.cpp  glfwInitialize.hpp  imguiInitialize.cpp  imguiInitialize.hpp  vulkanBuffer.cpp  vulkanBuffer.hpp  vulkanContext.hpp  vulkanDebug.cpp  vulkanDebug.hpp  vulkanInitialize.cpp  vulkanInitialize.hpp  vulkanShader.cpp  vulkanShader.hpp  vulkanSwapChain.cpp  vulkanSwapChain.hpp  vulkanTexture.cpp  vulkanTexture.hpp  vulkanUtilities.cpp  vulkanUtilities.hpp
src/components/: boidsComponent.hpp  cameraComponent.hpp  meshComponent.hpp  shaderComponent.hpp  textureComponent.hpp  transformComponent.hpp
src/controller/: application.cpp  application.hpp  scene.cpp  scene.hpp
src/entity/: entity.hpp  entityFactor.cpp  entityFactor.hpp
src/loaders/: objLoader.cpp  objLoader.hpp
src/shaders/: Boids.comp  Boids.frag  Boids.vert  DefaultShader.frag  DefaultShader.vert  Grid.frag  Grid.vert  compileShaders.py  compileShadersMacOS.sh  compileShadersWin32.bat  test2.frag
src/systems/: boidsSystem.cpp  boidsSystem.hpp  cameraSystem.cpp  cameraSystem.hpp  renderSystem.cpp  renderSystem.hpp
